Fixed some bugs and fixed comparison of raw and processed telemetry on the map