@@ -6,6 +6,7 @@ import com.example.DroneTelemetrySystem.filters.KalmanFilter;
 import com.example.DroneTelemetrySystem.models.Drone;
 import com.example.DroneTelemetrySystem.models.RawTelemetry;
 import com.example.DroneTelemetrySystem.models.Telemetry;
+import com.example.DroneTelemetrySystem.models.enums.ProcessingType;
 import com.example.DroneTelemetrySystem.repositories.DroneRepository;
 import com.example.DroneTelemetrySystem.repositories.RawTelemetryRepository;
 import com.example.DroneTelemetrySystem.repositories.TelemetryRepository;
@@ -14,6 +15,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 
 @Service
@@ -92,32 +94,48 @@ public class TelemetryService {
         Drone drone = droneRepository.findById(dto.getDroneId())
                 .orElseThrow(() -> new RuntimeException("Drone not found"));
 
+        // Отримуємо останню оброблену телеметрію для цього дрона
         List<Telemetry> lastTelemetry = telemetryRepository.findTop1ByDroneIdOrderByLocalDateTimeDesc(dto.getDroneId());
-        double lastLatitude = lastTelemetry.isEmpty() ? dto.getLatitude() : lastTelemetry.getFirst().getLatitude();
-        double lastLongitude = lastTelemetry.isEmpty() ? dto.getLongitude() : lastTelemetry.getFirst().getLongitude();
 
-        KalmanFilter latFilter = new KalmanFilter(lastLatitude);
-        KalmanFilter lonFilter = new KalmanFilter(lastLongitude);
+        // Ініціалізуємо фільтри Калмана
+        KalmanFilter latFilter = new KalmanFilter(lastTelemetry.isEmpty() ? dto.getLatitude() : lastTelemetry.get(0).getLatitude());
+        KalmanFilter lonFilter = new KalmanFilter(lastTelemetry.isEmpty() ? dto.getLongitude() : lastTelemetry.get(0).getLongitude());
 
+        // Фільтруємо координати
         double filteredLat = latFilter.update(dto.getLatitude(), dto.getSpeed(), dto.getGpsAccuracy());
         double filteredLon = lonFilter.update(dto.getLongitude(), dto.getSpeed(), dto.getGpsAccuracy());
 
+        // Розраховуємо відстань та зміну висоти
         double totalDistance = 0.0;
+        double totalDistanceHaversine = 0.0;
         double altitudeChange = 0.0;
 
         if (!lastTelemetry.isEmpty()) {
-            Telemetry previousTelemetry = lastTelemetry.getFirst();
-            totalDistance = previousTelemetry.getTotalDistance();
-
-            double distance = distanceCalculator.calculateHaversineDistance(
-                    previousTelemetry.getLatitude(), previousTelemetry.getLongitude(),
+            Telemetry prev = lastTelemetry.getFirst();
+            // Відстань між попередньою обробленою точкою та поточною фільтрованою
+            totalDistanceHaversine = distanceCalculator.calculateHaversineDistance(
+                    prev.getLatitude(), prev.getLongitude(),
                     filteredLat, filteredLon);
 
-            totalDistance += distance;
-            altitudeChange = dto.getAltitude() - previousTelemetry.getAltitude();
+            // Загальна відстань
+            totalDistance = prev.getTotalDistance() + totalDistanceHaversine;
+            altitudeChange = dto.getAltitude() - prev.getAltitude();
         }
 
-        return createTelemetry(dto, drone, filteredLat, filteredLon, totalDistance, 0.0, altitudeChange);
+        // Створюємо нову оброблену телеметрію
+        Telemetry telemetry = new Telemetry();
+        telemetry.setDrone(drone);
+        telemetry.setLatitude(filteredLat);
+        telemetry.setLongitude(filteredLon);
+        telemetry.setAltitude(dto.getAltitude());
+        telemetry.setSpeed(dto.getSpeed());
+        telemetry.setLocalDateTime(LocalDateTime.now());
+        telemetry.setAltitudeChange(altitudeChange);
+        telemetry.setTotalDistance(totalDistance);
+        telemetry.setTotalDistanceHaversine(totalDistanceHaversine);
+        telemetry.setProcessingType(ProcessingType.KALMAN);
+
+        return telemetryRepository.save(telemetry);
     }
 
     @Transactional
@@ -125,64 +143,61 @@ public class TelemetryService {
         Drone drone = droneRepository.findById(dto.getDroneId())
                 .orElseThrow(() -> new RuntimeException("Drone not found"));
 
-        double altitudeChange = 0.0;
-        double filteredLat = dto.getLatitude();
-        double filteredLon = dto.getLongitude();
-
+        // Отримуємо останню оброблену телеметрію
         List<Telemetry> lastTelemetry = telemetryRepository.findTop1ByDroneIdOrderByLocalDateTimeDesc(dto.getDroneId());
+
         double totalDistance = 0.0;
         double totalDistanceHaversine = 0.0;
+        double altitudeChange = 0.0;
 
         if (!lastTelemetry.isEmpty()) {
-            Telemetry previousTelemetry = lastTelemetry.getFirst();
-            totalDistance = previousTelemetry.getTotalDistance();
-            totalDistanceHaversine = previousTelemetry.getTotalDistanceHaversine();
+            Telemetry prev = lastTelemetry.get(0);
+            // Розраховуємо відстань за формулою Гаверсина
+            totalDistanceHaversine = distanceCalculator.calculateHaversineDistance(
+                    prev.getLatitude(), prev.getLongitude(),
+                    dto.getLatitude(), dto.getLongitude());
 
-            double distance = distanceCalculator.calculateHaversineDistance(
-                    previousTelemetry.getLatitude(), previousTelemetry.getLongitude(),
-                    filteredLat, filteredLon);
-
-            totalDistanceHaversine += distance;
-
-            double directDistance = distanceCalculator.calculateDirectDistance(previousTelemetry, dto);
-            totalDistance += directDistance;
-            altitudeChange = dto.getAltitude() - previousTelemetry.getAltitude();
+            totalDistance = prev.getTotalDistance() + totalDistanceHaversine;
+            altitudeChange = dto.getAltitude() - prev.getAltitude();
         }
 
-        return createTelemetry(dto, drone, filteredLat, filteredLon, totalDistance, totalDistanceHaversine, altitudeChange);
+        // Створюємо нову телеметрію
+        Telemetry telemetry = new Telemetry();
+        telemetry.setDrone(drone);
+        telemetry.setLatitude(dto.getLatitude());  // Беремо оригінальні координати
+        telemetry.setLongitude(dto.getLongitude());
+        telemetry.setAltitude(dto.getAltitude());
+        telemetry.setSpeed(dto.getSpeed());
+        telemetry.setLocalDateTime(LocalDateTime.now());
+        telemetry.setAltitudeChange(altitudeChange);
+        telemetry.setTotalDistance(totalDistance);
+        telemetry.setTotalDistanceHaversine(totalDistanceHaversine);
+        telemetry.setProcessingType(ProcessingType.HAVERSINE);
+
+        return telemetryRepository.save(telemetry);
     }
 
     @Transactional
     public Telemetry processWithKalmanAndHaversine(TelemetryDto dto) {
-        Drone drone = droneRepository.findById(dto.getDroneId())
-                .orElseThrow(() -> new RuntimeException("Drone not found"));
+        // Комбінуємо підходи Kalman та Haversine
+        Telemetry kalmanResult = processWithKalmanFilter(dto);
+        TelemetryDto haversineDto = new TelemetryDto(
+                dto.getId(),
+                kalmanResult.getLatitude(),  // Беремо відфільтровані координати
+                kalmanResult.getLongitude(),
+                dto.getAltitude(),
+                dto.getSpeed(),
+                dto.getGpsAccuracy(),
+                dto.getDroneId(),
+                dto.getAltitudeChange()
+        );
 
-        List<Telemetry> lastTelemetry = telemetryRepository.findTop1ByDroneIdOrderByLocalDateTimeDesc(dto.getDroneId());
-        double lastLatitude = lastTelemetry.isEmpty() ? dto.getLatitude() : lastTelemetry.getFirst().getLatitude();
-        double lastLongitude = lastTelemetry.isEmpty() ? dto.getLongitude() : lastTelemetry.getFirst().getLongitude();
+        return processWithHaversine(haversineDto);
+    }
 
-        KalmanFilter latFilter = new KalmanFilter(lastLatitude);
-        KalmanFilter lonFilter = new KalmanFilter(lastLongitude);
-
-        double filteredLat = latFilter.update(dto.getLatitude(), dto.getSpeed(), dto.getGpsAccuracy());
-        double filteredLon = lonFilter.update(dto.getLongitude(), dto.getSpeed(), dto.getGpsAccuracy());
-
-        double totalDistance = 0.0;
-        double altitudeChange = 0.0;
-
-        if (!lastTelemetry.isEmpty()) {
-            Telemetry previousTelemetry = lastTelemetry.getFirst();
-            totalDistance = previousTelemetry.getTotalDistance();
-
-            double distance = distanceCalculator.calculateHaversineDistance(
-                    previousTelemetry.getLatitude(), previousTelemetry.getLongitude(),
-                    filteredLat, filteredLon);
-
-            totalDistance += distance;
-            altitudeChange = dto.getAltitude() - previousTelemetry.getAltitude();
-        }
-
-        return createTelemetry(dto, drone, filteredLat, filteredLon, totalDistance, 0.0, altitudeChange);
+    @Transactional(readOnly = true)
+    public List<RawTelemetry> getAllRawTelemetryForDrone(Long droneId) {
+        return rawTelemetryRepository.findByDroneIdOrderByLocalDateTimeAsc(droneId);
     }
 
     @Transactional(readOnly = true)
@@ -190,4 +205,142 @@ public class TelemetryService {
         return telemetryRepository.findTop50ByDroneIdOrderByLocalDateTimeDesc(droneId);
     }
 
+    @Transactional
+    public void deleteByDroneId(Long droneId) {
+        telemetryRepository.deleteByDroneId(droneId);
+    }
+
+    @Transactional
+    public List<Telemetry> processAllWithKalman(Long droneId) {
+        telemetryRepository.deleteByDroneId(droneId);
+        List<RawTelemetry> rawList = rawTelemetryRepository.findByDroneIdOrderByLocalDateTimeAsc(droneId);
+        List<Telemetry> result = new ArrayList<>();
+
+        if (rawList.isEmpty()) return result;
+
+        // Ініціалізація фільтрів з першою точкою
+        KalmanFilter latFilter = new KalmanFilter(rawList.get(0).getLatitude());
+        KalmanFilter lonFilter = new KalmanFilter(rawList.get(0).getLongitude());
+
+        Telemetry prev = null;
+
+        for (RawTelemetry raw : rawList) {
+            // Фільтрація координат
+            double filteredLat = latFilter.update(raw.getLatitude(), raw.getSpeed(), raw.getGpsAccuracy());
+            double filteredLon = lonFilter.update(raw.getLongitude(), raw.getSpeed(), raw.getGpsAccuracy());
+
+            // Розрахунок відстаней
+            double distance = 0;
+            double altitudeChange = 0;
+
+            if (prev != null) {
+                distance = distanceCalculator.calculateHaversineDistance(
+                        prev.getLatitude(), prev.getLongitude(),
+                        filteredLat, filteredLon
+                );
+                altitudeChange = raw.getAltitude() - prev.getAltitude();
+            }
+
+            Telemetry t = new Telemetry();
+            t.setDrone(raw.getDrone());
+            t.setLatitude(filteredLat);
+            t.setLongitude(filteredLon);
+            t.setAltitude(raw.getAltitude());
+            t.setSpeed(raw.getSpeed());
+            t.setLocalDateTime(raw.getLocalDateTime());
+            t.setAltitudeChange(altitudeChange);
+            t.setTotalDistance(prev != null ? prev.getTotalDistance() + distance : 0);
+            t.setTotalDistanceHaversine(distance);
+            t.setProcessingType(ProcessingType.KALMAN);
+
+            result.add(telemetryRepository.save(t));
+            prev = t;
+        }
+
+        return result;
+    }
+
+    @Transactional
+    public List<Telemetry> processAllWithHaversine(Long droneId) {
+        telemetryRepository.deleteByDroneId(droneId);
+
+        List<RawTelemetry> rawTelemetryList = rawTelemetryRepository.findByDroneIdOrderByLocalDateTimeAsc(droneId);
+        List<Telemetry> processedTelemetry = new ArrayList<>();
+
+        Telemetry previous = null;
+
+        for (RawTelemetry raw : rawTelemetryList) {
+            double totalDistance = 0.0;
+            double totalDistanceHaversine = 0.0;
+            double altitudeChange = 0.0;
+
+            if (previous != null) {
+                totalDistanceHaversine = distanceCalculator.calculateHaversineDistance(
+                        previous.getLatitude(), previous.getLongitude(),
+                        raw.getLatitude(), raw.getLongitude());
+
+                totalDistance = previous.getTotalDistance() + totalDistanceHaversine;
+                altitudeChange = raw.getAltitude() - previous.getAltitude();
+            }
+
+            Telemetry telemetry = new Telemetry();
+            telemetry.setDrone(raw.getDrone());
+            telemetry.setLatitude(raw.getLatitude());
+            telemetry.setLongitude(raw.getLongitude());
+            telemetry.setAltitude(raw.getAltitude());
+            telemetry.setSpeed(raw.getSpeed());
+            telemetry.setLocalDateTime(raw.getLocalDateTime());
+            telemetry.setAltitudeChange(altitudeChange);
+            telemetry.setTotalDistance(totalDistance);
+            telemetry.setTotalDistanceHaversine(totalDistanceHaversine);
+            telemetry.setProcessingType(ProcessingType.HAVERSINE);
+
+            processedTelemetry.add(telemetryRepository.save(telemetry));
+            previous = telemetry;
+        }
+
+        return processedTelemetry;
+    }
+
+    @Transactional
+    public List<Telemetry> processAllWithKalmanAndHaversine(Long droneId) {
+        List<Telemetry> kalmanResults = processAllWithKalman(droneId);
+
+        telemetryRepository.deleteByDroneId(droneId);
+
+        List<Telemetry> finalResults = new ArrayList<>();
+        Telemetry previous = null;
+
+        for (Telemetry kalman : kalmanResults) {
+            double totalDistance = 0.0;
+            double totalDistanceHaversine = 0.0;
+            double altitudeChange = 0.0;
+
+            if (previous != null) {
+                totalDistanceHaversine = distanceCalculator.calculateHaversineDistance(
+                        previous.getLatitude(), previous.getLongitude(),
+                        kalman.getLatitude(), kalman.getLongitude());
+
+                totalDistance = previous.getTotalDistance() + totalDistanceHaversine;
+                altitudeChange = kalman.getAltitude() - previous.getAltitude();
+            }
+
+            Telemetry telemetry = new Telemetry();
+            telemetry.setDrone(kalman.getDrone());
+            telemetry.setLatitude(kalman.getLatitude());
+            telemetry.setLongitude(kalman.getLongitude());
+            telemetry.setAltitude(kalman.getAltitude());
+            telemetry.setSpeed(kalman.getSpeed());
+            telemetry.setLocalDateTime(kalman.getLocalDateTime());
+            telemetry.setAltitudeChange(altitudeChange);
+            telemetry.setTotalDistance(totalDistance);
+            telemetry.setTotalDistanceHaversine(totalDistanceHaversine);
+            telemetry.setProcessingType(ProcessingType.KALMAN_AND_HAVERSINE);
+
+            finalResults.add(telemetryRepository.save(telemetry));
+            previous = telemetry;
+        }
+
+        return finalResults;
+    }
 }
